# burnrate

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Settings.tsx
website/src/demo/components/: Settings.tsx
website/src/lib/: config.ts
