[package]
name = "burnrate"
version = "0.2.0"
edition = "2021"

[lib]
name = "burnrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSAnimationContext", "NSColor", "NSView", "NSWindow", "objc2-quartz-core"] }
objc2-foundation = { version = "0.3.2", features = ["NSKeyValueCoding", "NSValue"] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView"] }
